<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />


    <action
        android:id="@+id/action_dashboardFragment_to_galleryFragment"
        app:destination="@id/navigation_gallery"
        app:popUpTo="@id/navigation_dashboard"
        app:popUpToInclusive="true" />

    <action
        android:id="@+id/action_NotificationsFragment"
        app:destination="@id/navigation_notifications"
        app:popUpTo="@id/navigation_dashboard"
        app:popUpToInclusive="true" />

    <action
        android:id="@+id/action_dashboardFragment_to_HomeFragment"
        app:destination="@id/navigation_home"
        app:popUpTo="@id/navigation_dashboard"
        app:popUpToInclusive="true" />

    <action
        android:id="@+id/action_HomeFragment_to_DashboardFragment"
        app:destination="@id/navigation_dashboard"
        app:popUpTo="@id/navigation_dashboard"
        app:popUpToInclusive="true" />

    <action android:id="@+id/action_global_navigation_gallery"
        app:destination="@id/navigation_gallery"
        app:popUpToInclusive="true"/>

    <action android:id="@+id/action_global_navigation_home"
        app:destination="@id/navigation_home"
        app:popUpTo="@id/navigation_dashboard"
        app:popUpToInclusive="true"/>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myapplication.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.example.myapplication.ui.gallery.galleryFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/activity_gallery" />

</navigation>